# nanodent

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  COPYING.md  README.md  pyproject.toml  uv.toml
.github/workflows/: ci.yml  release.yml
doc/: api.rst  conf.py  index.rst
notebooks/: demo.ipynb
src/nanodent/: __init__.py  io.py  models.py  plotting.py  study.py
src/nanodent/analysis/: __init__.py  align.py  derivative.py  filters.py  fit.py  force_peaks.py  hertzian.py  oliver_pharr.py  onset.py  quality.py  unloading.py
tests/: conftest.py  test_analysis.py  test_io.py  test_nanodent.py  test_plotting.py  test_study.py
tests/data/: experiment_a.hld  experiment_b.hld  experiment_c.hld  experiment_d.hld  experiment_e.hld
