[build-system]
requires = [
    "hatchling>=1.25",
]
build-backend = "hatchling.build"


[project]
name = "nanodent"
description = "Analysis package for nanoindentation experimental data."
readme = "README.md"
maintainers = [
    { name = "Thomas Isensee", email = "thomas.isensee@iwr.uni-heidelberg.de" },
]
version = "0.0.1"
requires-python = ">=3.10"
license-files = ["LICEN[CS]E*"]
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy"
]

[project.optional-dependencies]
docs = [
    "ipykernel",
    "nbsphinx",
    "nbsphinx-link",
    "sphinx",
    "sphinx_mdinclude",
    "sphinx_rtd_theme",
]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]
lint = [
    "mypy",
    "ruff",
]
tests = [
    "pytest",
    "pytest-cov",
    "nbval",
]

[project.urls]
repository = "https://github.com/thomasisensee/nanodent"


# Hatchling build configuration for a src-layout package.
[tool.hatch.build.targets.wheel]
packages = ["src/nanodent"]

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = [
    "tests",
    "notebooks",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
exclude = "doc"

[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
